--- a/exercises/nesting/src/sass/app.scss
+++ b/exercises/nesting/src/sass/app.scss
@@ -1,5 +1,29 @@
 body {
     h1 {
-    color: #c46;
+    color: teal;
   }
+}
+
+.btn {
+  padding: 2px 10px;
+  border-radius: 2px;
+  border: 1px solid #c46;
+
+  &.btn-primary {
+    background-color: rgb(204, 68, 102);
+    color: rgb(255,255,255);
+  }
+
+  &.btn-secondary{
+    background-color: rgb(237,188,200);
+  }
+
+  &:disabled {
+    opacity: 0.5;
+  }
+
+  &:hover {
+    background-color: black;
+  }
+
 }
