--- a/exercises/variables/src/sass/app.scss
+++ b/exercises/variables/src/sass/app.scss
@@ -1,3 +1,5 @@
+@import '_variables';
+
 body {
     h1 {
     color: #c69;
@@ -7,13 +9,14 @@ body {
   padding: 2px 10px;
   border-radius: 2px;
   &.btn-primary {
-    border: 1px solid rebeccapurple;
-    background-color: lawngreen;
+    border: 1px solid $venus;
+    background-color: $hopbush;
     color: #fff;
+    padding-left: 10px;
   }
   &.btn-secondary {
-    border: 1px solid cadetblue;
-    background-color: peru;
+    border: 1px solid $patina;
+    background-color: $nebula;
     color: #000;
   }
   &:disabled {
