--- a/exercises/range/src/sass/app.scss
+++ b/exercises/range/src/sass/app.scss
@@ -1,6 +1,77 @@
 @import '_variables';
 @import '_mixins';
 
-input[type="range"] {
-  // Add your styles here
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+  &:focus {
+    outline: none;
+  }
+  @include range-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: $rangeshadow;
+    background: $darkblue;
+    border-radius: 1.3px;
+    border: $range_small_border;
+  }
+
+  @include range-thumb {
+    box-shadow: $rangeshadow;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+
+
+  &::-webkit-slider-thumb {
+    box-shadow: $rangeshadow;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -14px;
+  }
+  &:focus::-webkit-slider-runnable-track {
+    background: $lightblue;
+  }
+  
+  &::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+  }
+  &::-ms-fill-lower {
+    background: #2a6495;
+    border: $range_small_border;
+    border-radius: 2.6px;
+    box-shadow: $rangeshadow;
+  }
+  &::-ms-fill-upper {
+    background: $darkblue;
+    border: $range_small_border;
+    border-radius: 2.6px;
+    box-shadow: $rangeshadow;
+  }
+  
+  &:focus::-ms-fill-lower {
+    background: $darkblue;
+  }
+  &:focus::-ms-fill-upper {
+    background: $lightblue;
+  }
 }
